Add user connection

--- a/client/landing.html
+++ b/client/landing.html
@@ -2,6 +2,7 @@
   <head>
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" type="text/css" href="/dist/main.css">
+    <script src='/lib/jquery/dist/jquery.min.js'></script>
   </head>
   <body>
     <div class='container'>
@@ -9,5 +10,6 @@
       <a href='/auth/login'>Login</a>
       <div id='container'></div>
     </div>
+    <script src='/dist/main.js'></script>
   </body>
 </html>
