--- a/client/game.html
+++ b/client/game.html
@@ -2,6 +2,7 @@
   <head>
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" type="text/css" href="/dist/main.css">
+    <script src='/lib/jquery/dist/jquery.min.js'></script>
   </head>
   <body>
     <div class='container'>
