--- a/client/landing.html
+++ b/client/landing.html
@@ -1,15 +1,19 @@
 <html>
   <head>
     <script src="/socket.io/socket.io.js"></script>
+    <link rel="stylesheet" type="text/css" href="/lib/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/dist/main.css">
     <script src='/lib/jquery/dist/jquery.min.js'></script>
   </head>
   <body>
     <div class='container'>
-      <h1>Split Or Deal</h1>
-      <a href='/auth/login'>Login</a>
+      <h1>Split Or Steal</h1>
+      <a id='login-button' href='/auth/login'>Login</a>
       <div id='container'></div>
+      <script>
+        $('#login-button').click();
+      </script>
     </div>
-    <script src='/dist/main.js'></script>
   </body>
 </html>
