--- a/client/game.html
+++ b/client/game.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id='container'></div>
+    <script src='/config.js'></script>
     <script src='/dist/main.js'></script>
   </body>
 </html>
