Add bootstrap menu

--- a/client/game.html
+++ b/client/game.html
@@ -9,6 +9,7 @@
   <body>
     <div id='container'></div>
     <script src='/config.js'></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src='/dist/main.js'></script>
   </body>
 </html>
