--- a/client/landing.html
+++ b/client/landing.html
@@ -11,9 +11,7 @@
       <h1>Split Or Steal</h1>
       <a id='login-button' href='/auth/login'>Login</a>
       <div id='container'></div>
-      <script>
-        $('#login-button').click();
-      </script>
     </div>
+    <script type="text/css" href="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
